@@ -1,3 +1,9 @@
+2006-05-11  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_PersonView.py: add additional fields, and build
+	filter
+	* src/PeopleModel.py: handle both search and filters
+	* src/Filters/_GenericFilter.py: import RelLib
+
 2006-05-11  Alex Roitman  <shura@gramps-project.org>
 	* src/UndoHistory.py (gtk_color_to_str): Correct byte color.
 	(UndoHistory._selection_changed): Enable/disable buttons.
